# testeipa

./: codemagic.yaml  pyproject.toml
src/: app.py
src/teste_ipa/: app.py
